--- a/clibs/SciTE.properties
+++ b/clibs/SciTE.properties
@@ -1,5 +1,5 @@
 command.go.*.c=gcc *.c -std=c99  -O0 -o test -lm -llapacke -lGLEW -lGL && time ./test
 command.go.subsystem.*.c=0
 
-command.build.*.c=gcc *.c -std=c99  -O0 -lm -llapacke -lGLEW -fPIC -shared -o ../interface.so  && cat interface_*.h> ../interface.h
+command.build.*.c=gcc *.c -std=c99  -O0 -lm -llapacke -lGLEW -fPIC -shared -o ../interface.so  
 command.build.subsystem.*.c=0
